--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/jelati.jpg" alt="Jelle en Tati" style="width:150px;height:200px;"></td>
+      <td><img src="images/jelati.JPG" alt="Jelle en Tati" style="width:150px;height:200px;"></td>
       <td>
         <h1>Jelle Breusegem</h1>
         <p><em>Junior ontwikkelaar<strong><a href="https://www.binnova.be">bij Binnova BV</a></strong>.</em></p>
