--- a/hobbies.html
+++ b/hobbies.html
@@ -10,8 +10,8 @@
   <h3>Mijn hobbies</h3>
   <ol>
     <li>Lopen</li>
-    <li><a href="images/MTB.jpg">Fietsen</a></li>
-    <li><a href="images/jura.jpg">Paardrijden</a></li>
+    <li><a href="images/MTB.JPG">Fietsen</a></li>
+    <li><a href="images/Jura.JPG">Paardrijden</a></li>
   </ol>
 </body>
 
