--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img style="border-radius: 100%;" src="images/Jelati.JPG" alt="Jelle en Tati" style="width:150px;height:200px;"></td>
+      <td><img style="width:150px;height:200px;border-radius:100%;" src="images/Jelati.JPG" alt="Jelle en Tati"></td>
       <td>
         <h1>Jelle Breusegem</h1>
         <p><em>Junior ontwikkelaar<strong><a href="https://www.binnova.be">bij Binnova BV</a></strong>.</em></p>
