--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>De persoonlijke site van Jelle</title>
+  <style>
+    img{
+      width:150px;
+      height:200px;
+      border-radius:100%;
+    }
+  </style>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img style="width:150px;height:200px;border-radius:100%;" src="images/Jelati.JPG" alt="Jelle en Tati"></td>
+      <td><img src="images/Jelati.JPG" alt="Jelle en Tati"></td>
       <td>
         <h1>Jelle Breusegem</h1>
         <p><em>Junior ontwikkelaar<strong><a href="https://www.binnova.be">bij Binnova BV</a></strong>.</em></p>
